The final adjustments to my 2nd deliverable in UCBX Boot Camp

--- a/about.html
+++ b/about.html
@@ -49,7 +49,8 @@
   <!--/.Navbar-->
 
   <br>
-  <div class="container">
+  
+  <div class="container well">
     <div class="row">
       <!-- <img class="bio-image" src="assets/images/profile-photo.jpg" alt="bio-pic"> -->
 
