--- a/contact.html
+++ b/contact.html
@@ -2,33 +2,28 @@
 <html lang="en">
 
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="./assets/css/style.css" rel="stylesheet">
-  <title>Document</title>
+  <link href="https://fonts.googleapis.com/css?family=Heebo&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="./assets/css/style.css" />
+
 </head>
 
 <body>
-  
-  <nav class="navbar navbar-light navbar-1 white">
-
-    <!-- Navbar brand -->
-    <h2><a class="navbar-brand" href="index.html">Armande L. Milhouse</a></h2>
-
-    <!-- Collapse button -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent15"
-      aria-controls="navbarSupportedContent15" aria-expanded="false" aria-label="Toggle navigation"><span
-        class="navbar-toggler-icon"></span></button>
-
-    <!-- Collapsible content -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent15">
-
-      <!-- Links -->
-      <ul class="navbar-nav mr-auto">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">Armande L. Milhouse</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
         </li>
@@ -38,100 +33,53 @@
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
+        <li class="nav-item">
+          <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
+        </li>
       </ul>
-      <!-- Links -->
-
     </div>
-    <!-- Collapsible content -->
-
   </nav>
-  <!--/.Navbar-->
-
-  <br>
-  <br>
   <div class="container">
     <div class="row">
-      <!-- <img class="bio-image" src="assets/images/profile-photo.jpg" alt="bio-pic"> -->
-
-
-      <div class="col-md-4">
-        <img class="img-fluid" src="assets/images/profile-photo.jpg" id="floated-text" alt="bio-pic">
-      </div>
-      <!-- <br> -->
-      <div class="col-md-8">
-        <form action="//submit.form" id="ContactUs100" method="post" onsubmit="return ValidateForm(this);">
-          <script type="text/javascript">
-            function ValidateForm(frm) {
-              if (frm.Name.value == "") { alert('Name is required.'); frm.Name.focus(); return false; }
-              if (frm.FromEmailAddress.value == "") { alert('Email address is required.'); frm.FromEmailAddress.focus(); return false; }
-              if (frm.FromEmailAddress.value.indexOf("@") < 1 || frm.FromEmailAddress.value.indexOf(".") < 1) { alert('Please enter a valid email address.'); frm.FromEmailAddress.focus(); return false; }
-              if (frm.Comments.value == "") { alert('Please enter comments or questions.'); frm.Comments.focus(); return false; }
-              return true;
-            }
-          </script>
-          <table style="width:550px;border:0;" cellpadding="8" cellspacing="0">
-            <tr>
-              <td>
-                <label for="Name">Name*</label>
-              </td>
-              <td>
-                <input name="Name" type="text" maxlength="60" style="width:250px;" />
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <label for="PhoneNumber">Phone number</label>
-              </td>
-              <td>
-                <input name="PhoneNumber" type="text" maxlength="43" style="width:250px;" />
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <label for="FromEmailAddress">Email address*</label>
-              </td>
-              <td>
-                <input name="FromEmailAddress" type="text" maxlength="90" style="width:250px;" />
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <label for="Comments">Tell Me More*</label>
-              </td>
-              <td>
-                <textarea name="Comments" rows="7" cols="40" style="width:350px;"></textarea>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                * - required fields
-              </td>
-              <td>
-                <div style="float:right"><a href="" id="lnk100" title=""></a></div>
-                <input name="skip_Submit" type="submit" value="Submit" />
-                <!-- <script src="https://www.100forms.com/js/FORMKEY:FUS753QF8T2K/SEND:my@email.com" type="text/javascript"></script> -->
-              </td>
-            </tr>
-          </table>
-        </form>
+      <div class="col-md-12">
+        <h2>Contact</h2>
       </div>
     </div>
+    <div class="row">
+
+      <div class="col-md-4 col-sm-12" >
+        <img class="img-fluid" src="./assets/images/profile-photo.jpg" alt="profile photo">
 
 
+      </div>
+      <div class="col-md-8 col-sm-12">
+        <form>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Name</label>
+            <input type="name" class="form-control" id="exampleInputPassword1" placeholder="Name">
+          </div>
+          
+          <div class="form-group">
+            <textarea type="text" class="form-control" rows="5" cols="90" id="exampleCheck1">Please leave a message</textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        
 
+      </div>
+    </div>
   </div>
-  <!-- <br> -->
 
+  <footer class="page-footer">
+    &copy; Armande L. Milhouse
 
-
-
-
-  <!-- <div>
-
-    </div> -->
-  <footer class="footer">
-    <p class="footertext">BioCentric Consulting LLC</p>
   </footer>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
@@ -141,7 +89,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-
 </body>
 
 </html>
