--- a/portfolio.html
+++ b/portfolio.html
@@ -2,85 +2,75 @@
 <html lang="en">
 
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="./assets/css/style.css" rel="stylesheet">
-  <title>Document</title>
+  <link href="https://fonts.googleapis.com/css?family=Heebo&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="./assets/css/style.css" />
+
 </head>
 
 <body>
-  <!-- <div class="wrapper"> -->
-  <!--Navbar-->
-  <nav class="navbar navbar-light navbar-1 white">
-
-    <!-- Navbar brand -->
-    <h2><a class="navbar-brand" href="index.html">Armande L. Milhouse</a></h2>
-
-    <!-- Collapse button -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent15"
-      aria-controls="navbarSupportedContent15" aria-expanded="false" aria-label="Toggle navigation"><span
-        class="navbar-toggler-icon"></span></button>
-
-    <!-- Collapsible content -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent15">
-
-      <!-- Links -->
-      <ul class="navbar-nav mr-auto">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="./index.html">Armande L. Milhouse</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./about.html">About <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
+          <a class="nav-link" href="./portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="./contact.html">Contact</a>
+        </li>
+        <li class="nav-item">
+          <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
         </li>
       </ul>
-      <!-- Links -->
-
     </div>
-    <!-- Collapsible content -->
-
   </nav>
-  <!--/.Navbar-->
-
-  <br>
   <div class="container">
-    <!-- <div>
-      <img class="bio-image" src="assets/images/profile-photo.jpg" alt="bio-pic"> -->
     <div class="row">
-      <!-- </div> -->
-      <div class="col-md-6 image">
-        <img class="img-fluid" src="assets/images/port 1.jpeg" alt="bio-pic" height="225px" width="225px">
-        <div class="banner">FIRST ASSIGNMENT</div>
-      </div>
-      <div class="col-md-6 image">
-        <img class="img-fluid" src="assets/images/port 2.jpeg" alt="bio-pic" height="225px" width="225px">
-        <div class="banner">FIRST ASSIGNMENT</div>
+      <div class="col-md-12">
+        <h2>Portfolio</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 image">
-        <img class="img-fluid" src="assets/images/port 3.jpeg" alt="bio-pic" height="225px" width="225px">
-        <div class="banner">FIRST ASSIGNMENT</div>
+
+      <div class="col-md-4 col-sm-12" >
+        <img class="img-fluid" src="./assets/images/profile-photo.jpg" alt="profile photo">
+
+
       </div>
-      <div class="col-md-6 image">
-        <img class="img-fluid" src="assets/images/port 4.jpeg" alt="bio-pic" height="225px" width="225px">
-        <div class="banner">FIRST ASSIGNMENT</div>
+      <div class="col-md-8 col-sm-12" id="port-photo">
+        <div class="row"> 
+          <div class="col-md-6"><img class="img-fluid" src="./assets/images/Port 1.jpeg" alt="cyberphoto"></div>
+          <div class="col-md-6"><img class="img-fluid" src="./assets/images/port 2.jpeg" alt="cyberphoto"></div>
+        </div>
+        <div class="row"> 
+          <div class="col-md-6"><img class="img-fluid" src="./assets/images/port 1.jpeg" alt="cyberphoto"></div>
+          <div class="col-md-6"><img class="img-fluid" src="./assets/images/port 4.jpeg" alt="cyberphoto"></div>
+        </div>
+       
       </div>
     </div>
-
-    <br>
-
   </div>
 
-  <footer class="footer">
-    <p class="footertext">BioCentric Consulting LLC</p>
+  <footer class="page-footer">
+    &copy; Armande L. Milhouse
+
   </footer>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
@@ -90,8 +80,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-
-
 </body>
 
 </html>
