finalized with the proper readme.md

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
           <div class="col-md-6"><img class="img-fluid" src="./assets/images/port 2.jpeg" alt="cyberphoto"></div>
         </div>
         <div class="row"> 
-          <div class="col-md-6"><img class="img-fluid" src="./assets/images/port 1.jpeg" alt="cyberphoto"></div>
+          <div class="col-md-6"><img class="img-fluid" src="./assets/images/Port 1.jpeg" alt="cyberphoto"></div>
           <div class="col-md-6"><img class="img-fluid" src="./assets/images/port 4.jpeg" alt="cyberphoto"></div>
         </div>
        
